test/corpus/extras.txt
================================================================================
Comments
================================================================================

*** Settings ***    # Can I comment here?

Documentation       I am just text, # not a comment   # But I am a comment
...                 # I am also a comment           I should still be the comment

# Hello, it's a comment!
#
#
# Empty comment lines work too

--------------------------------------------------------------------------------

(source_file
  (section
    (settings_section
      (section_header)
      (extra_text)
      (setting_statement
        (setting_name)
        (arguments
          (argument
            (text_chunk))
          (comment)
          (continuation
            (ellipses)))
        (comment))
      (comment)
      (comment)
      (comment)
      (comment))))

================================================================================
Copyright header before first section
================================================================================

# Copyright 2026 Foo Corp
# All rights reserved.

*** Settings ***

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (section
    (settings_section
      (section_header))))
